main/default/objects/ExceptionLog__c/ExceptionLog__c.object-meta.xml
<CustomObject>
    <description>To track all exceptions occuring</description>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EXCP - {0000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>