main/default/objects/ExceptionLog__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>