main/default/objects/ExceptionLog__c/fields/ContextUser__c.field-meta.xml
<CustomField>
    <fullName>ContextUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Context User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExceptionLogs</relationshipName>
    <type>Lookup</type>
</CustomField>