main/default/objects/ExceptionLog__c/fields/ConvertedToDefect__c.field-meta.xml
<CustomField>
    <fullName>ConvertedToDefect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field to indicate if exception is converted to defect.</description>
    <label>Converted To Defect</label>
    <type>Checkbox</type>
</CustomField>