main/default/objects/ExceptionLog__c/fields/ExceptionLogTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLogTimestamp__c</fullName>
    <label>ExceptionLog Timestamp</label>
    <type>DateTime</type>
</CustomField>