main/default/objects/ExceptionLog__c/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <label>Organization Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>