main/default/objects/ExceptionLog__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <label>QueueName</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>