main/default/objects/ExceptionLog__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>15</length>
    <type>Text</type>
</CustomField>