main/default/objects/ExceptionLog__c/fields/WSCallingArea__c.field-meta.xml
<CustomField>
    <fullName>WSCallingArea__c</fullName>
    <label>WS CallingArea</label>
    <length>100</length>
    <type>Text</type>
</CustomField>